# incident-handoff-readiness-check

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  POST_CAPTION.md  README.md  incident_handoff_check.py  pyproject.toml
docs/: CASE_STUDY.md
reports/: risky_handoff_metrics.prom  risky_handoff_report.json  risky_handoff_report.md
samples/: risky_handoff.json  safe_handoff.json
tests/: test_incident_handoff_check.py
